Social list correctly aligned

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -268,6 +268,11 @@
 }
 
 .contact-list,
+.social-media-list:lang(he),
+.social-media-list:lang(fa) {
+    direction: ltr;
+    text-align: right;
+}
 .social-media-list {
     list-style: none;
     margin-left: 0;
